--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -22,26 +22,29 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+
     steps:
-      - name: Move files to root directory
-      run: |
-        mkdir public
-        mv Titanic/Titanic\ EDA\ slide.slides.html public/index.html
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Move files to public directory
+        run: |
+          mkdir public
+          mv Titanic/Titanic\ EDA\ slide.slides.html public/index.html
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: '.'
+          path: public 
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
